added model param

--- a/1_Transformer_Models/1_transformers.ipynb
+++ b/1_Transformer_Models/1_transformers.ipynb
@@ -49,6 +49,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here, pipeline defaults to the model `distilbert-base-uncased-finetuned-sst-2-english`, but it is a good practice to specify the model explicitly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'POSITIVE', 'score': 0.9982897639274597}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from transformers import pipeline\n",
+    "\n",
+    "classifier = pipeline(\"sentiment-analysis\", \n",
+    "                      model=\"distilbert/distilbert-base-uncased-finetuned-sst-2-english\")\n",
+    "result = classifier(\"I've been waiting for this course so eagerly.\")\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Passing several sentences."
    ]
   },
@@ -237,25 +269,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n",
       "Setting `pad_token_id` to `eos_token_id`:None for open-end generation.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': 'The LLM transformer model course teaches us how to use this, and how to develop a very complex and efficient transformer with a very simple setup model. It will be used with any of the above modules for any given stage in the learning curve.'},\n",
-       " {'generated_text': \"The LLM transformer model course teaches us how to store and use LIDAR technology.\\n\\n\\n\\n\\nIf you've been interested in using LIDAR technology with the LIDAR, please see the README.\\nYou can browse\"}]"
+       "[{'generated_text': 'The LLM transformer model course teaches us how to transform our environment to new and dynamic levels of clean data. If you want to learn more about what it actually means to become an LLM developer today, check out http://www.lac.'},\n",
+       " {'generated_text': 'The LLM transformer model course teaches us how to produce and produce solid transformers! It helps you to find more technical answers. Our project helps you to find technical solutions that simplify the way your transformer works!\\n\\n\\n\\nIf you work through'}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +294,9 @@
    "source": [
     "from transformers import pipeline\n",
     "\n",
-    "generator = pipeline(\"text-generation\", model=\"distilgpt2\")\n",
+    "generator = pipeline(\"text-generation\", \n",
+    "                     model=\"distilgpt2\",\n",
+    "                     truncation=True)\n",
     "generator(\n",
     "    \"The LLM transformer model course teaches us how to\",\n",
     "    max_length=50,\n",
@@ -298,15 +331,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "No model was supplied, defaulted to distilbert/distilroberta-base and revision fb53ab8 (https://huggingface.co/distilbert/distilroberta-base).\n",
-      "Using a pipeline without specifying a model name and revision in production is not recommended.\n",
       "Some weights of the model checkpoint at distilbert/distilroberta-base were not used when initializing RobertaForMaskedLM: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
       "- This IS expected if you are initializing RobertaForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
@@ -333,7 +364,7 @@
        "   'sequence': '<s>The optimization algorithm in the<mask> course is used for visualization.</s>'}]]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +372,7 @@
    "source": [
     "from transformers import pipeline\n",
     "\n",
-    "unmasker = pipeline(\"fill-mask\")\n",
+    "unmasker = pipeline(\"fill-mask\", model = \"distilbert/distilroberta-base\")\n",
     "unmasker(\"The optimization algorithm in the <mask> course is used for <mask>.\", top_k=2) #top_k is used to control how many possible answers we want to be displayed on screen"
    ]
   },
@@ -356,15 +387,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "No model was supplied, defaulted to dbmdz/bert-large-cased-finetuned-conll03-english and revision 4c53496 (https://huggingface.co/dbmdz/bert-large-cased-finetuned-conll03-english).\n",
-      "Using a pipeline without specifying a model name and revision in production is not recommended.\n",
       "Some weights of the model checkpoint at dbmdz/bert-large-cased-finetuned-conll03-english were not used when initializing BertForTokenClassification: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
       "- This IS expected if you are initializing BertForTokenClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForTokenClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
@@ -397,7 +426,7 @@
        "  'end': 73}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +434,7 @@
    "source": [
     "from transformers import pipeline\n",
     "\n",
-    "ner = pipeline(\"ner\", grouped_entities=True)\n",
+    "ner = pipeline(\"ner\", grouped_entities=True, model=\"dbmdz/bert-large-cased-finetuned-conll03-english\")\n",
     "ner(\"My name is Sylvain and I am from Los Angeles, USA. I work in Hugging Face.\")"
    ]
   },
@@ -429,58 +458,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No model was supplied, defaulted to distilbert/distilbert-base-cased-distilled-squad and revision 564e9b5 (https://huggingface.co/distilbert/distilbert-base-cased-distilled-squad).\n",
-      "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'score': 0.9084675908088684, 'start': 61, 'end': 73, 'answer': 'Hugging Face'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from transformers import pipeline\n",
-    "\n",
-    "question_answerer = pipeline(\"question-answering\")\n",
-    "question_answerer(\n",
-    "    question=\"Where do I work?\",\n",
-    "    context=\"My name is Sylvain and I am from Los Angeles, USA. I work in Hugging Face.\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No model was supplied, defaulted to distilbert/distilbert-base-cased-distilled-squad and revision 564e9b5 (https://huggingface.co/distilbert/distilbert-base-cased-distilled-squad).\n",
-      "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'score': 0.6270330548286438,\n",
-       " 'start': 33,\n",
-       " 'end': 49,\n",
-       " 'answer': 'Los Angeles, USA'}"
+       "{'score': 0.9084675908088684, 'start': 61, 'end': 73, 'answer': 'Hugging Face'}"
       ]
      },
      "execution_count": 7,
@@ -491,7 +475,36 @@
    "source": [
     "from transformers import pipeline\n",
     "\n",
-    "question_answerer = pipeline(\"question-answering\")\n",
+    "question_answerer = pipeline(\"question-answering\", model=\"distilbert/distilbert-base-cased-distilled-squad\")\n",
+    "question_answerer(\n",
+    "    question=\"Where do I work?\",\n",
+    "    context=\"My name is Sylvain and I am from Los Angeles, USA. I work in Hugging Face.\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'score': 0.6270330548286438,\n",
+       " 'start': 33,\n",
+       " 'end': 49,\n",
+       " 'answer': 'Los Angeles, USA'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from transformers import pipeline\n",
+    "\n",
+    "question_answerer = pipeline(\"question-answering\", model=\"distilbert/distilbert-base-cased-distilled-squad\")\n",
     "question_answerer(\n",
     "    question=\"Where am I from?\",\n",
     "    context=\"My name is Sylvain and I am from Los Angeles, USA. I work in Hugging Face.\",\n",
@@ -509,24 +522,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No model was supplied, defaulted to sshleifer/distilbart-cnn-12-6 and revision a4f8f3e (https://huggingface.co/sshleifer/distilbart-cnn-12-6).\n",
-      "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[{'summary_text': ' America has changed dramatically during recent years . The number of engineering graduates in the U.S. has declined in traditional engineering disciplines such as mechanical, civil,    electrical, chemical, and aeronautical engineering . Rapidly developing economies such as China and India continue to encourage and advance the teaching of engineering .'}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +539,7 @@
    "source": [
     "from transformers import pipeline\n",
     "\n",
-    "summarizer = pipeline(\"summarization\")\n",
+    "summarizer = pipeline(\"summarization\", model=\"sshleifer/distilbart-cnn-12-6\")\n",
     "summarizer(\n",
     "    \"\"\"\n",
     "    America has changed dramatically during recent years. Not only has the number of \n",
@@ -565,14 +570,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No model was supplied, defaulted to sshleifer/distilbart-cnn-12-6 and revision a4f8f3e (https://huggingface.co/sshleifer/distilbart-cnn-12-6).\n",
-      "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "[{'summary_text': ' America has changed dramatically during recent years . The number of engineering graduates in the U.S. has declined in traditional engineering disciplines such as mechanical, civil,    electrical, chemical, and aeronautical engineering . Rapidly developing economies such as China and India continue to encourage and advance the teaching of engineering .'}]"
@@ -586,7 +583,7 @@
    "source": [
     "from transformers import pipeline\n",
     "\n",
-    "summarizer = pipeline(\"summarization\", max_length=200)\n",
+    "summarizer = pipeline(\"summarization\", max_length=200, model=\"sshleifer/distilbart-cnn-12-6\")\n",
     "summarizer(\n",
     "    \"\"\"\n",
     "    America has changed dramatically during recent years. Not only has the number of \n",
